fix(Home): adjust spacing of home

--- a/src/pages/home/index.css
+++ b/src/pages/home/index.css
@@ -6,7 +6,7 @@
 .home-box {
   background-color: #f4f4f6;
   border-radius: 36px;
-  padding: 20px;
+  padding: 70px 50px;
 }
 
 .modal-header-left {
